--- a/app/src/main/res/layout/fragment_dhaba_list.xml
+++ b/app/src/main/res/layout/fragment_dhaba_list.xml
@@ -130,6 +130,7 @@
                             android:src="@drawable/ic_no_dhaba" />
 
                         <TextView
+                            android:id="@+id/tvNoDhaba"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginVertical="@dimen/_10sdp"
