--- a/app/src/main/res/layout/fragment_other_amenities.xml
+++ b/app/src/main/res/layout/fragment_other_amenities.xml
@@ -110,6 +110,10 @@
 
                     </RadioGroup>
 
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:scrollbars="none"
+                        android:layout_height="wrap_content">
                     <RadioGroup
                         android:id="@+id/rgMerch27_7"
                         android:layout_width="match_parent"
@@ -146,6 +150,7 @@
                             android:text="@string/_200_400_m" />
 
                     </RadioGroup>
+                    </HorizontalScrollView>
                 </LinearLayout>
 
                 <LinearLayout
@@ -220,6 +225,10 @@
 
                     </RadioGroup>
 
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:scrollbars="none"
+                        android:layout_height="wrap_content">
                     <RadioGroup
                         android:id="@+id/rgPuncture_24_7"
                         android:layout_width="match_parent"
@@ -256,6 +265,7 @@
                             android:text="@string/_200_400_m" />
 
                     </RadioGroup>
+                    </HorizontalScrollView>
                 </LinearLayout>
 
                 <LinearLayout
@@ -330,6 +340,10 @@
 
                     </RadioGroup>
 
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:scrollbars="none"
+                        android:layout_height="wrap_content">
                     <RadioGroup
                         android:id="@+id/rgUtility24_7"
                         android:layout_width="match_parent"
@@ -366,6 +380,7 @@
                             android:text="@string/_200_400_m" />
 
                     </RadioGroup>
+                    </HorizontalScrollView>
                 </LinearLayout>
 
                 <LinearLayout
@@ -440,6 +455,10 @@
 
                     </RadioGroup>
 
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:scrollbars="none"
+                        android:layout_height="wrap_content">
                     <RadioGroup
                         android:id="@+id/rgBarber"
                         android:layout_width="match_parent"
@@ -476,6 +495,7 @@
                             android:text="@string/_200_400_m" />
 
                     </RadioGroup>
+                    </HorizontalScrollView>
                 </LinearLayout>
 
                 <FrameLayout
