--- a/app/src/main/res/layout/fragment_security_amenities.xml
+++ b/app/src/main/res/layout/fragment_security_amenities.xml
@@ -56,6 +56,10 @@
                         android:textColor="@color/black"
                         android:textSize="16sp" />
 
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:scrollbars="none"
+                        android:layout_height="wrap_content">
                     <RadioGroup
                         android:id="@+id/rgDayGuard"
                         android:layout_width="match_parent"
@@ -100,6 +104,7 @@
                             android:text="@string/above_5" />
 
                     </RadioGroup>
+                    </HorizontalScrollView>
                 </LinearLayout>
 
                 <LinearLayout
@@ -117,6 +122,10 @@
                         android:textColor="@color/black"
                         android:textSize="16sp" />
 
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:scrollbars="none"
+                        android:layout_height="wrap_content">
                     <RadioGroup
                         android:id="@+id/rgNightGuard"
                         android:layout_width="match_parent"
@@ -161,6 +170,7 @@
                             android:text="@string/above_5" />
 
                     </RadioGroup>
+                    </HorizontalScrollView>
                 </LinearLayout>
 
                 <LinearLayout
@@ -290,6 +300,10 @@
 
                     </RadioGroup>
 
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:scrollbars="none"
+                        android:layout_height="wrap_content">
                     <RadioGroup
                         android:id="@+id/rgIndoorCameras"
                         android:layout_width="match_parent"
@@ -325,6 +339,7 @@
                             android:text="@string/above_5" />
 
                     </RadioGroup>
+                    </HorizontalScrollView>
                 </LinearLayout>
 
                 <FrameLayout
