--- a/app/src/main/res/layout/fragment_sleeping_amenities.xml
+++ b/app/src/main/res/layout/fragment_sleeping_amenities.xml
@@ -265,6 +265,10 @@
                         android:textColor="@color/black"
                         android:textSize="16sp" />
 
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:scrollbars="none"
+                        android:layout_height="wrap_content">
                     <RadioGroup
                         android:id="@+id/rgExposed"
                         android:layout_width="match_parent"
@@ -299,6 +303,7 @@
                             android:text="@string/both" />
 
                     </RadioGroup>
+                    </HorizontalScrollView>
                 </LinearLayout>
 
                 <LinearLayout
