--- a/app/src/main/res/layout/row_dhaba_list.xml
+++ b/app/src/main/res/layout/row_dhaba_list.xml
@@ -119,7 +119,7 @@
                     android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textSize="13sp"
-                    android:visibility="@{(model.dhabaCategory.isEmpty() || isInProgress)? View.GONE : View.VISIBLE}" />
+                    android:visibility="@{(model.dhabaCategory.isEmpty() || isInProgress)? View.GONE : View.GONE}" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvAddress"
