--- a/app/src/main/res/layout/fragment_owner_details.xml
+++ b/app/src/main/res/layout/fragment_owner_details.xml
@@ -693,7 +693,7 @@
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
                     android:padding="@dimen/_10sdp"
-                    android:text="@{isUpdate ? context.getString(R.string.update) : context.getString(R.string.next)}"
+                    android:text="@{isUpdate ? context.getString(R.string.next) : context.getString(R.string.next)}"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:textSize="18sp"
