--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -77,6 +77,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_1sdp"
+                    android:visibility="gone"
                     android:background="@color/viewColor" />
 
                 <LinearLayout
@@ -85,6 +86,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:gravity="center"
+                    android:visibility="gone"
                     android:orientation="horizontal"
                     android:padding="10dp"
                     android:weightSum="2">
