--- a/app/src/main/res/layout/fragment_amenities.xml
+++ b/app/src/main/res/layout/fragment_amenities.xml
@@ -594,8 +594,7 @@
                 android:text="@string/save_as_draft"
                 android:textAllCaps="false"
                 android:textColor="@color/colorRed"
-                android:textSize="18sp"
-                android:visibility="@{viewOnly ? View.GONE : View.VISIBLE}" />
+                android:textSize="18sp"/>
 
         </LinearLayout>
     </ScrollView>
