--- a/app/src/main/res/layout/fragment_bank_details.xml
+++ b/app/src/main/res/layout/fragment_bank_details.xml
@@ -270,8 +270,8 @@
                     android:fontFamily="@font/opensans_semibold"
                     android:text="@string/onboarded_by"
                     android:textColor="@color/black"
-                    android:visibility="gone"
                     android:textSize="16sp"
+                    android:visibility="gone"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/framePanCardPhoto" />
 
@@ -280,9 +280,9 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="gone"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/name"
+                    android:visibility="gone"
                     app:boxStrokeColor="@color/input_selector"
                     app:boxStrokeWidth="0.6dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -306,9 +306,9 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="gone"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/onboarding_date"
+                    android:visibility="gone"
                     app:boxStrokeColor="@color/input_selector"
                     app:boxStrokeWidth="0.6dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -332,9 +332,9 @@
                     android:id="@+id/divider2"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_1sdp"
-                    android:visibility="gone"
                     android:layout_marginTop="@dimen/_15sdp"
                     android:background="@color/colorGrey1"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/onboardingDateTil" />
@@ -346,9 +346,9 @@
                     android:layout_marginTop="@dimen/_15sdp"
                     android:fontFamily="@font/opensans_semibold"
                     android:text="@string/sales_executive"
-                    android:visibility="gone"
                     android:textColor="@color/black"
                     android:textSize="16sp"
+                    android:visibility="gone"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
@@ -359,8 +359,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/name"
-                    app:boxStrokeColor="@color/input_selector"
                     android:visibility="gone"
+                    app:boxStrokeColor="@color/input_selector"
                     app:boxStrokeWidth="0.6dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -385,8 +385,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/phone_number"
-                    app:boxStrokeColor="@color/input_selector"
                     android:visibility="gone"
+                    app:boxStrokeColor="@color/input_selector"
                     app:boxStrokeWidth="0.6dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -409,8 +409,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_1sdp"
                     android:layout_marginTop="@dimen/_15sdp"
-                    android:visibility="gone"
                     android:background="@color/colorGrey1"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/phoneNumberTil" />
@@ -420,11 +420,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_15sdp"
-                    android:visibility="gone"
                     android:fontFamily="@font/opensans_semibold"
                     android:text="@string/area_head"
                     android:textColor="@color/black"
                     android:textSize="16sp"
+                    android:visibility="gone"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/divider3" />
 
@@ -435,8 +435,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/name"
-                    app:boxStrokeColor="@color/input_selector"
                     android:visibility="gone"
+                    app:boxStrokeColor="@color/input_selector"
                     app:boxStrokeWidth="0.6dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -458,9 +458,9 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="gone"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/phone_number"
+                    android:visibility="gone"
                     app:boxStrokeColor="@color/input_selector"
                     app:boxStrokeWidth="0.6dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -644,6 +644,7 @@
                     android:textAllCaps="false"
                     android:textColor="@color/colorRed"
                     android:textSize="18sp"
+                    android:visibility="@{viewOnly ? View.GONE : View.VISIBLE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
