--- a/app/src/main/res/layout/fragment_dhaba_details.xml
+++ b/app/src/main/res/layout/fragment_dhaba_details.xml
@@ -877,6 +877,7 @@
                     android:text="@string/save_as_draft"
                     android:textColor="@color/colorRed"
                     android:textSize="18sp"
+                    android:visibility="@{viewOnly ? View.GONE : View.VISIBLE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
